# llm-metadata-generator

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  config.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py
app/admin/: __init__.py  routes.py
app/agents/: __init__.py  bioschemas.py  logger.py  ontology.py
app/api/: _extraction.py  collection.py  health.py  resource.py  sessions.py
app/cron/: __init__.py  ontologies.py
app/db/: __init__.py  schema.sql  sqlite.py
app/models/: session.py  user.py
archived_run/: README.md
docs/Bioschemas/: Bioschemas_docu_with_tess_annotations.md  Bioschemas_examples.md  bioschemas-training-schema.json  course-profile.md  courseinstance-profile.md  json-sehma.json  schemaorg-course.jsonld  schemaorg-learningresource.jsonld  trainingmaterial-profile.md
docs/Bioschemas/bioschemas-ai-docs/: courseinstance-profile.html  trainingmaterial-profile.html
docs/Bioschemas/examples/: course-with-instances.json  courseinstance-online.json  courseinstance-onsite.json  trainingmaterial-minimal.json  trainingmaterial-panet.json  trainingmaterial-recommended.json
integration_test/: README.md  config.json
normal_run/: README.md
templates/: admin_missing_terms.html  admin_ontologies.html  archived_runs.html  index.html  integration_tests.html  normal_runs.html  sessions.html
tests/: test_agents.py  test_api.py  test_app.py  test_auth.py  test_bioschemas_examples.py  test_logger.py  test_ontology.py
(+25 files in other folders)
